kubernetes/apps/database-system/emqx-operator/cluster/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.noirprime.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: emqx
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: emqx.png
    gethomepage.dev/name: ENQX
    gethomepage.dev/group: Observability
spec:
  hostnames: ["emqx.noirprime.com"]
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: emqx-dashboard
          namespace: database-system
          port: 18083
